--- a/styles/analysis.module.css
+++ b/styles/analysis.module.css
@@ -2,7 +2,8 @@
     background: rgb(60, 60, 60);
     color: lightgoldenrodyellow;
     margin: auto;
-    max-width: 700px;
+    max-width: 600px;
+    padding: 1rem;
 }
 
 .container h1 {
@@ -23,4 +24,18 @@
     justify-content: space-evenly;
     border-radius: 5px;
     height: 150px;
+}
+
+.card span {
+    font-size: 1.5rem;
+    font-family: "Times New Roman", Times, serif;
+    margin-top: 10px;
+    padding: 5px;
+    text-decoration: underline solid black;
+    text-underline-offset: 4px;
+}
+
+.card h2 {
+    text-align: center;
+    font-weight: bold;
 }
